# ai-blockchain-assistant

./: .gitignore  Cargo.toml  README.md
crates/chatapp/: .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
crates/chatapp/public/: index.html
crates/chatapp/src/: App.tsx  declarations.d.ts  index.css  index.tsx
crates/chatapp/src-tauri/: Cargo.toml  tauri.conf.json
crates/chatapp/src-tauri/src/: agent.rs  client.rs  commands.rs  lib.rs  main.rs  mcp_client.rs  repl.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: blockchain.rs  external_apis.rs  lib.rs  main.rs  rag_service.rs  server.rs  tools.rs
crates/rig-client/: Cargo.toml
crates/rig-client/src/: agent.rs  client.rs  commands.rs  main.rs  mcp_client.rs  repl.rs
crates/shared/: Cargo.toml
crates/shared/src/: abi_loader.rs  lib.rs  rag.rs
data/: erc20_abi.json  tokens.json  uniswap_v2_router_abi.json
data/docs/contracts/: EthereumBasics.md  TokenStandards.md
data/docs/uniswap-v2/: UniswapV2Overview.md
scripts/: populate_rag.sh  run_app.sh  run_repl.sh
