[workspace]
members = [
  "crates/mcp-server",
  "crates/rig-client", 
  "crates/shared",
  "crates/chatapp/src-tauri"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive", "env"] }
reqwest = { version = "0.12.23", features = ["json"] }
uuid = { version = "1.18.0", features = ["v4"] }
ethers = "2.0"
hex = "0.4"
dotenv = "0.15"