[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }

# MCP specific dependencies
mcp-sdk = "0.0.3"
async-trait = "0.1"
futures = "0.3"
chrono = "0.4.41"
