[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-log = "2"
shared = { path = "../../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
rustyline = "17.0.1"
colored = "3.0.0"
anthropic = "0.0.8"
anthropic-sdk-rust = "0.1.1"
async-trait = "0.1"
futures = "0.3"
regex = "1.5"
